--- a/src/sass/utilities/_medium.scss
+++ b/src/sass/utilities/_medium.scss
@@ -14,6 +14,13 @@
 		}
 	}
 
+	// #contact .contact {
+	// 	&__info {
+	// 		display: flex;
+	// 		justify-content: flex-end;
+		
+	// 	}
+	// }
 }
 @media (max-width: 768px) {
 	#header .header__text {
