--- a/src/sass/utilities/_small.scss
+++ b/src/sass/utilities/_small.scss
@@ -1,5 +1,23 @@
 @media (max-width: 576px) {
-#header {
-    background-image: url('../../../dist/img/jungle_640.jpg');
-}
+	#header {
+		background-image: url('../../../dist/img/jungle_640.jpg');
+	}
+	// #contact .contact {
+	// 	&__logo {
+	// 		position: absolute;
+	// 		left: 50%;
+	// 		transform: translateX(-50%);
+	// 		margin: 1em 0;
+	// 	}
+	// 	&__info {
+	// 		flex-direction: column;
+
+	// 		&-item {
+				
+	// 			&-text {
+	// 				font-size: 1rem;
+	// 			}
+	// 		}
+	// 	}
+	// }
 }
