--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -313,7 +313,42 @@ div .aboutus-box__text::first-line {
 }
 
 .contact {
-	
-	
-	
+	background-color: #f5f5f5;
+
+	&__box {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		&-one {
+			padding: 2em 0 0;
+			margin-bottom: 1em;
+		}
+		&-logo {
+			a {
+				color: #000;
+				font-size: 4rem;
+				text-transform: uppercase;
+			}
+		}
+
+		&-two {
+			display: flex;
+			flex-direction: row;
+			padding: 0 1em;
+			margin-bottom: 1em;
+		}
+
+		&-info {
+			padding: 0 1em;
+			&-tittle {
+				font-size: 1.5rem;
+			}
+		}
+		&-content {
+			margin-top: 1em;
+			&-text {
+				font-size: 1em;
+			}	
+		}
+	}
 }
