--- a/src/sass/utilities/_small.scss
+++ b/src/sass/utilities/_small.scss
@@ -2,22 +2,31 @@
 	#header {
 		background-image: url('../../../dist/img/jungle_640.jpg');
 	}
-	// #contact .contact {
-	// 	&__logo {
-	// 		position: absolute;
-	// 		left: 50%;
-	// 		transform: translateX(-50%);
-	// 		margin: 1em 0;
-	// 	}
-	// 	&__info {
-	// 		flex-direction: column;
+	#contact .contact {
+		&__box {
+			margin-bottom: 2em;
+			padding: 0 1em;
+			&-logo {
+				margin-bottom: 1em;
+				a {
+					font-size: 2rem;
+					cursor: pointer;
+					
+				}
+			}
 
-	// 		&-item {
-				
-	// 			&-text {
-	// 				font-size: 1rem;
-	// 			}
-	// 		}
-	// 	}
-	// }
+			
+			&-info {
+				&-tittle {
+					font-size: 1.4rem;
+				}
+			}
+			
+			&-content{
+				&-text {
+					font-size: 1rem;
+				}
+			}
+		}
+	}
 }
