--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -314,20 +314,26 @@ div .aboutus-box__text::first-line {
 
 .contact {
 	background-color: #f5f5f5;
+	overflow: hidden;
 
 	&__box {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+
 		&-one {
 			padding: 2em 0 0;
 			margin-bottom: 1em;
 		}
 		&-logo {
+			white-space: nowrap;
 			a {
 				color: #000;
 				font-size: 4rem;
 				text-transform: uppercase;
+				i {
+					margin-right: 0.5em;
+				}
 			}
 		}
 
@@ -339,16 +345,18 @@ div .aboutus-box__text::first-line {
 		}
 
 		&-info {
+			white-space: nowrap;
 			padding: 0 1em;
 			&-tittle {
-				font-size: 1.5rem;
+				font-size: 2rem;
 			}
 		}
 		&-content {
 			margin-top: 1em;
 			&-text {
-				font-size: 1em;
-			}	
+				font-size: 1.5rem;
+				cursor: pointer;
+			}
 		}
 	}
 }
