--- a/src/sass/utilities/_small.scss
+++ b/src/sass/utilities/_small.scss
@@ -2,31 +2,33 @@
 	#header {
 		background-image: url('../../../dist/img/jungle_640.jpg');
 	}
-	#contact .contact {
-		&__box {
-			margin-bottom: 2em;
-			padding: 0 1em;
-			&-logo {
-				margin-bottom: 1em;
-				a {
-					font-size: 2rem;
-					cursor: pointer;
+// 	footer .footer {
+// 		&__box {
+// 			margin-bottom: 2em;
+// 			padding: 0 1em;
+// 			&-logo {
+// 				margin-bottom: 1em;
+// 				a {
+// 					font-size: 2rem;
+// 					cursor: pointer;
 					
-				}
-			}
+// 				}
+// 			}
 
 			
-			&-info {
-				&-tittle {
-					font-size: 1.4rem;
-				}
-			}
+// 			&-info {
+// 				&-tittle {
+// 					font-size: 1.4rem;
+// 				}
+// 			}
 			
-			&-content{
-				&-text {
-					font-size: 1rem;
-				}
-			}
-		}
-	}
-}
+// 			&-content{
+// 				&-text {
+// 					a {
+// 						font-size: 1rem;
+// 					}
+// 				}
+// 			}
+// 		}
+// 	}
+ }
