--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -300,63 +300,157 @@ div .aboutus-box__text::first-line {
 				width: 60%;
 				border: none;
 				background-color: #fff;
+				color: rgb(8, 231, 108);
 				box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.6);
+				text-transform: uppercase;
 				cursor: pointer;
-				transition: background-color 0.3s;
+				transition: background-color 0.3s, color 0.3s;
 			}
 
 			&-btn:hover {
 				background-color: rgb(8, 231, 108);
+				color: #fff;
+			}
+		}
+	}
+
+	&__box {
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: start;
+		padding: 0 2em;
+		// position: relative;
+		color: #000;
+		// text-align: center;
+		&-more {
+			margin-bottom: 1em;
+			&-tittle {
+				margin-bottom: 1em;
+				font-size: 2rem;
+				font-weight: 700;
+				letter-spacing: 2px;
+			}
+
+			&-text {
+				font-size: 1.5rem;
+				font-weight: 200;
+			}
+
+			&-btn {
+				display: flex;
+				align-self: start;
+				white-space: nowrap;
+				// position: absolute;
+				// left: 50%;
+				// transform: translateX(-50%);
+				// top: 50%;
+				padding: 1em;
+				border-radius: 8px;
+				margin-top: 1em;
+				background-color: rgb(8, 231, 108);
+				color: #f5f5f5;
+				font-size: 1.5rem;
+				border: none;
+				box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.6);
+				text-transform: uppercase;
+				cursor: pointer;
+				transition: background-color 0.3s, color 0.3s;
+			}
+
+			&-btn:hover {
+				color: rgb(8, 231, 108);
+				background-color: #fff;
 			}
 		}
 	}
 }
 
-.contact {
+// .footer {
+// 	background-color: #f5f5f5;
+// 	overflow: hidden;
+
+// 	&__box {
+// 		display: flex;
+// 		flex-direction: column;
+// 		align-items: center;
+
+// 		&-one {
+// 			padding: 2em 0 0;
+// 			margin-bottom: 1em;
+// 		}
+// 		&-logo {
+// 			white-space: nowrap;
+// 			a {
+// 				color: #000;
+// 				font-size: 4rem;
+// 				text-transform: uppercase;
+// 				i {
+// 					margin-right: 0.5em;
+// 				}
+// 			}
+// 		}
+
+// 		&-two {
+// 			display: flex;
+// 			flex-direction: row;
+// 			padding: 0 1em;
+// 			margin-bottom: 1em;
+// 		}
+
+// 		&-info {
+// 			white-space: nowrap;
+// 			padding: 0 1em;
+// 			&-tittle {
+// 				font-size: 2rem;
+// 			}
+// 		}
+// 		&-content {
+// 			margin-top: 1em;
+// 			list-style: none;
+// 			line-height: 180%;
+// 			&-text {
+// 				a {
+// 					font-size: 1.5rem;
+// 				text-decoration: none;
+// 				color: #414141;
+// 				}
+// 				a:hover {
+// 					color:rgb(10, 207, 99);
+// 				}
+// 			}
+// 		}
+// 	}
+// 	&__text {
+// 		border-top: 1px solid #414141;
+// 		padding: 1em 0;
+// 		text-align: center;
+// 	}
+// }
+
+.footer {
 	background-color: #f5f5f5;
-	overflow: hidden;
+	color: #000;
+	.container {
+		padding: 6em 2em 2em;
 
-	&__box {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-
-		&-one {
-			padding: 2em 0 0;
-			margin-bottom: 1em;
-		}
-		&-logo {
-			white-space: nowrap;
-			a {
-				color: #000;
-				font-size: 4rem;
-				text-transform: uppercase;
-				i {
-					margin-right: 0.5em;
-				}
-			}
-		}
-
-		&-two {
-			display: flex;
-			flex-direction: row;
-			padding: 0 1em;
-			margin-bottom: 1em;
-		}
-
-		&-info {
-			white-space: nowrap;
-			padding: 0 1em;
-			&-tittle {
-				font-size: 2rem;
-			}
-		}
-		&-content {
-			margin-top: 1em;
-			&-text {
-				font-size: 1.5rem;
-				cursor: pointer;
-			}
-		}
 	}
+	 &__box {
+		font-size: 1.4rem;
+
+		// &-desktop {
+		// 	display: none;
+		// }
+
+		&-title {
+			margin-bottom: 1em;
+			font-size: 3rem;
+			text-transform: uppercase;
+		}
+
+		&-social {
+			
+		}
+	 }
+	
 }
