--- a/src/sass/utilities/_large.scss
+++ b/src/sass/utilities/_large.scss
@@ -67,6 +67,13 @@
 	#offers .offers {
 		&__card {
 			width: 30%;
+			
+		}
+
+		&__box {
+			width: 100%;
+			padding: 0 1em;
+			margin-top: 3em;
 		}
 	}
 
