--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -46,8 +46,8 @@ p {
 	position: fixed;
 	top: 0;
 	width: 100%;
-	background-color: #fff;
-	border-bottom: 1px solid #d8d8d8;
+	background-color: rgb(9, 114, 54);
+	border-bottom: 1px solid #0b440b;
 	z-index: 10;
 	&__nav {
 		display: flex;
@@ -56,9 +56,8 @@ p {
 		height: 60px;
 	}
 	&__logo a {
-		// height: 20px;
 		font-size: 1.5em;
-		color: #000;
+		color: #fff;
 		i {
 			margin-right: 0.3em;
 		}
@@ -92,13 +91,13 @@ p {
 	}
 	&__item a {
 		padding: 1em 2em;
-		color: #000;
+		color: #fff;
 		transition: color 0.3s;
 		cursor: pointer;
 	}
 	&__item a:hover {
-		background-color: #000;
-		color: #fff;
+		background-color: #fff;
+		color: #1b1b1b;
 	}
 }
 
@@ -157,8 +156,9 @@ p {
 	margin-bottom: 0.8em;
 	padding-left: 0.5em;
 	font-size: 2.4rem;
-	color: #000;
+	color: #1b1b1b;
 	font-weight: 200;
+	text-transform: uppercase;
 }
 
 .aboutus-box {
@@ -170,6 +170,7 @@ p {
 		order: 1;
 		width: 100%;
 		max-width: 500px;
+		border-radius: 8px;
 	}
 
 	&__text p {
@@ -222,7 +223,7 @@ div .aboutus-box__text::first-line {
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
-		color: #000;
+		color: #1b1b1b;
 		&-tittle {
 			margin-top: 2.5em;
 			margin-bottom: 0.1em;
@@ -241,7 +242,7 @@ div .aboutus-box__text::first-line {
 		position: relative;
 		margin: 1em 0;
 		height: 450px;
-		color: #000;
+		color: #1b1b1b;
 		text-align: center;
 
 		&-info {
@@ -282,7 +283,7 @@ div .aboutus-box__text::first-line {
 						margin-right: 0.3em;
 					}
 					i.fa-check {
-						color: rgb(8, 231, 108);
+						color: rgb(9, 114, 54);
 					}
 					i.fa-minus {
 						color: #d8d8d8;
@@ -302,7 +303,7 @@ div .aboutus-box__text::first-line {
 				width: 60%;
 				border: none;
 				background-color: #fff;
-				color: rgb(8, 231, 108);
+				color: rgb(9, 114, 54);
 				box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.6);
 				text-transform: uppercase;
 				cursor: pointer;
@@ -310,7 +311,7 @@ div .aboutus-box__text::first-line {
 			}
 
 			&-btn:hover {
-				background-color: rgb(8, 231, 108);
+				background-color: rgb(9, 114, 54);
 				color: #fff;
 			}
 		}
@@ -322,13 +323,12 @@ div .aboutus-box__text::first-line {
 		flex-direction: column;
 		align-items: start;
 		padding: 0 2em;
-		color: #000;
+		color: #1b1b1b;
 		&-more {
 			margin-bottom: 1em;
 			&-tittle {
 				margin-bottom: 1em;
 				font-size: 2rem;
-				font-weight: 700;
 				letter-spacing: 2px;
 			}
 
@@ -344,7 +344,7 @@ div .aboutus-box__text::first-line {
 				padding: 1em;
 				border-radius: 8px;
 				margin-top: 1em;
-				background-color: rgb(8, 231, 108);
+				background-color: rgb(9, 114, 54);
 				color: #f5f5f5;
 				font-size: 1.5rem;
 				border: none;
@@ -355,7 +355,7 @@ div .aboutus-box__text::first-line {
 			}
 
 			&-btn:hover {
-				color: rgb(8, 231, 108);
+				color: rgb(9, 114, 54);
 				background-color: #fff;
 			}
 		}
@@ -367,7 +367,7 @@ div .aboutus-box__text::first-line {
 		height: 50px;
 	}
 	background-color: #f5f5f5;
-	color: #000;
+	color: #1b1b1b;
 	overflow: hidden;
 	.container {
 		padding: 6em 2em 2em;
@@ -395,7 +395,7 @@ div .aboutus-box__text::first-line {
 		&-link {
 			padding: 0 0.3em;
 			font-size: 3.6rem;
-			color: #000;
+			color: #1b1b1b;
 			text-decoration: none;
 			transition: color 0.3s;
 
@@ -403,7 +403,7 @@ div .aboutus-box__text::first-line {
 				padding-left: 0;
 			}
 			&:hover {
-				color: rgb(8, 231, 108);
+				color: rgb(9, 114, 54);
 			}
 		}
 	}
@@ -411,5 +411,47 @@ div .aboutus-box__text::first-line {
 	&__bottom-text {
 		padding: 2em;
 		text-align: center;
+	}
+}
+
+.services {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1.5rem;
+	margin: 4em 2em;
+
+	&__title {
+		margin-top: 2em;
+	}
+	&__box {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 1.5rem;
+		&-service {
+			flex: 1 1 30rem;
+			border-radius: 0.5rem;
+			background-color: #fff;
+			padding: 2rem;
+			text-align: center;
+			border-radius: 8px;
+			box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.6);
+
+			i {
+				color: rgb(9, 114, 54);
+				font-size: 2rem;
+				padding: 2em 0;
+			}
+			h3 {
+				color: #1b1b1b;
+				font-size: 1.5rem;
+				padding-top: 1rem;
+			}
+			p {
+				color: #1b1b1b;
+				font-size: 1rem;
+				padding: 1rem 0;
+				line-height: 180%;
+			}
+		}
 	}
 }
