--- a/src/sass/utilities/_small.scss
+++ b/src/sass/utilities/_small.scss
@@ -2,33 +2,11 @@
 	#header {
 		background-image: url('../../../dist/img/jungle_640.jpg');
 	}
-// 	footer .footer {
-// 		&__box {
-// 			margin-bottom: 2em;
-// 			padding: 0 1em;
-// 			&-logo {
-// 				margin-bottom: 1em;
-// 				a {
-// 					font-size: 2rem;
-// 					cursor: pointer;
-					
-// 				}
-// 			}
-
-			
-// 			&-info {
-// 				&-tittle {
-// 					font-size: 1.4rem;
-// 				}
-// 			}
-			
-// 			&-content{
-// 				&-text {
-// 					a {
-// 						font-size: 1rem;
-// 					}
-// 				}
-// 			}
-// 		}
-// 	}
+	#contact .contact {
+		&__box-info-item {
+			h5 {
+				font-size: 1.5rem;
+			}
+		}
+	}
  }
