--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -129,7 +129,8 @@ p {
 		height: 60vh;
 		max-height: 600px;
 		width: 100%;
-		padding: 1em;
+		padding: 1em 0;
+		padding-left: 3em;
 		text-align: center;
 		color: #fff;
 		h1 {
